--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.46.2",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-photo-view": "^1.2.3",
     "react-router": "^6.16.0",
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@hookform/devtools": "^4.3.1",
     "daisyui": "^3.7.7",
     "tailwindcss": "^3.3.3"
   }
